// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter splitted with mock component render 1`] = `
  render call: 0 in total
  >>>>>> functions >>>>>>>>>>>>>>>
    /* none */
  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>
    /* none */
`;

exports[`Counter splitted with mock component render 2`] = `
  render call: 1 in total
  >>>>>> functions >>>>>>>>>>>>>>>

    setDozen /* #0 */ (
      0
    ) /* return */ => (undefined)

  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>

    <ROOT>
      <MockComponent Counter
        length={0}
        increment={[Function]}
      />
    </ROOT>
`;

exports[`Counter with mock component render 1`] = `
<< 0 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

  render call: 0 in total
  >>>>>> functions >>>>>>>>>>>>>>>
    /* none */
  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>
    /* none */

<< 1 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    'setDozen' should be called once
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  render call: 1 in total
  >>>>>> functions >>>>>>>>>>>>>>>

    setDozen /* #0 */ (
      0
    ) /* return */ => (undefined)

  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>

    <ROOT>
      <MockComponent Counter
        length={0}
        increment={[Function]}
      />
    </ROOT>

<< 2 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    'setDozen must not be called
    'length' of Conunter should be 11
    render call should be 12
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  render call: 12 in total
  >>>>>> functions >>>>>>>>>>>>>>>
    /* none */
  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>

    <ROOT>
      <MockComponent Counter
        length={11}
        increment={[Function]}
      />
    </ROOT>

<< 3 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    'setDozen' should be called once more
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  render call: 13 in total
  >>>>>> functions >>>>>>>>>>>>>>>

    setDozen /* #0 */ (
      1
    ) /* return */ => (undefined)

  >>>>>> styles >>>>>>>>>>>>>>>>>>
    /* none */
  >>>>>> elements >>>>>>>>>>>>>>>>

    <ROOT>
      <MockComponent Counter
        length={12}
        increment={[Function]}
      />
    </ROOT>

<< END <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
`;
